<resources>
    <string name="app_name">Bills Tracker</string>
    <string name="see_bills">See all bills</string>
    <string name="what_do_i_pay">What do I need to pay?</string>
    <string name="bills_title">Bills</string>
    <string name="add_bill_title">Create bill</string>
    <string name="label_bill_name">Name</string>
    <string name="save">Save</string>
    <string name="label_bill_price">Price</string>
    <string name="label_bill_payment">Pay day</string>
    <string name="price">%1$.1f %2$s</string>
    <string name="edit_bill_fragment_title">Edit bill</string>
    <string name="bill_name_exists">This bill name already exists</string>
    <string name="invalid_float">Invalid float value</string>
    <string name="invalid_integer">Invalid integer value</string>
    <string name="invalid_payment_day">Value should be between 0 and 30</string>
    <string name="delete">Delete</string>
    <string name="log_in_message">You need to be logged in to use the app</string>
    <string name="log_in">Log in</string>
    <string name="not_logged_in_title">Log in</string>
    <string name="header_guest_title">Guest</string>
    <string name="log_out">Log out</string>
    <string name="action_save">Save</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
</resources>
