<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/bill_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_name"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/bill_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/bill_price_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_price"
            app:layout_constraintTop_toBottomOf="@id/bill_name_input_layout"
            app:layout_constraintRight_toLeftOf="@id/bill_currency_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/bill_price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/bill_currency_input"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bill_payment_day_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_name_input_layout"
            app:layout_constraintStart_toEndOf="@+id/bill_price_input_layout"
            app:layout_constraintVertical_bias="0.16000003"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/bill_payment_day_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_payment"
            app:layout_constraintTop_toBottomOf="@id/bill_price_input_layout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/bill_payment_day_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_bill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorSuccess"
            app:layout_constraintBottom_toTopOf="@id/delete_bill_button"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/delete_bill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"
            android:background="@color/colorDanger"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>